ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/SOC_Master__c.object-meta.xml
<CustomObject>
    <label>SOC Master</label>
    <nameField>
        <displayFormat>SOC-{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SOC Masters</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>