ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Asset_val_charges__c.field-meta.xml
<CustomField>
    <fullName>Asset_val_charges__c</fullName>
    <label>Asset val charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>