ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Cersairgnch__c.field-meta.xml
<CustomField>
    <fullName>Cersairgnch__c</fullName>
    <label>Cersairgnch</label>
    <length>18</length>
    <type>Text</type>
</CustomField>