ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Cibil_charges__c.field-meta.xml
<CustomField>
    <fullName>Cibil_charges__c</fullName>
    <label>Cibil charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>