ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Closure_bank_acc_charges__c.field-meta.xml
<CustomField>
    <fullName>Closure_bank_acc_charges__c</fullName>
    <label>Closure bank acc charges</label>
    <length>30</length>
    <type>Text</type>
</CustomField>