ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Colln_chrg_chq_rtn__c.field-meta.xml
<CustomField>
    <fullName>Colln_chrg_chq_rtn__c</fullName>
    <label>Colln chrg chq rtn</label>
    <length>30</length>
    <type>Text</type>
</CustomField>