ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Collnchrgcash__c.field-meta.xml
<CustomField>
    <fullName>Collnchrgcash__c</fullName>
    <label>Collnchrgcash</label>
    <length>18</length>
    <type>Text</type>
</CustomField>