ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Collnchrgpdcs__c.field-meta.xml
<CustomField>
    <fullName>Collnchrgpdcs__c</fullName>
    <label>Collnchrgpdcs</label>
    <length>18</length>
    <type>Text</type>
</CustomField>