ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Compensation_charges__c.field-meta.xml
<CustomField>
    <fullName>Compensation_charges__c</fullName>
    <label>Compensation charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>