ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Due_date_charges__c.field-meta.xml
<CustomField>
    <fullName>Due_date_charges__c</fullName>
    <label>Due date charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>