ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Dupnocch__c.field-meta.xml
<CustomField>
    <fullName>Dupnocch__c</fullName>
    <label>Dupnocch</label>
    <length>18</length>
    <type>Text</type>
</CustomField>