ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Fore_closure_charges__c.field-meta.xml
<CustomField>
    <fullName>Fore_closure_charges__c</fullName>
    <label>Fore closure charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>