ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Legal_repo_charges__c.field-meta.xml
<CustomField>
    <fullName>Legal_repo_charges__c</fullName>
    <label>Legal repo charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>