ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Loancc__c.field-meta.xml
<CustomField>
    <fullName>Loancc__c</fullName>
    <label>Loancc</label>
    <length>18</length>
    <type>Text</type>
</CustomField>