ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Nesl_renewal_charges__c.field-meta.xml
<CustomField>
    <fullName>Nesl_renewal_charges__c</fullName>
    <label>Nesl renewal charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>