ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Nocusageconv__c.field-meta.xml
<CustomField>
    <fullName>Nocusageconv__c</fullName>
    <label>Nocusageconv</label>
    <length>18</length>
    <type>Text</type>
</CustomField>