ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Other_charges__c.field-meta.xml
<CustomField>
    <fullName>Other_charges__c</fullName>
    <label>Other charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>