ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Over_due_int_mon__c.field-meta.xml
<CustomField>
    <fullName>Over_due_int_mon__c</fullName>
    <label>Over due int mon</label>
    <length>18</length>
    <type>Text</type>
</CustomField>