ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Repay_dc__c.field-meta.xml
<CustomField>
    <fullName>Repay_dc__c</fullName>
    <label>Repay dc</label>
    <length>18</length>
    <type>Text</type>
</CustomField>