ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Repay_dishonr_charges__c.field-meta.xml
<CustomField>
    <fullName>Repay_dishonr_charges__c</fullName>
    <label>Repay dishonr charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>