ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Roc_consult_fee__c.field-meta.xml
<CustomField>
    <fullName>Roc_consult_fee__c</fullName>
    <label>Roc consult fee</label>
    <length>18</length>
    <type>Text</type>
</CustomField>