ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Roc_filing_charges__c.field-meta.xml
<CustomField>
    <fullName>Roc_filing_charges__c</fullName>
    <label>Roc filing charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>