ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Rto_registration_charges__c.field-meta.xml
<CustomField>
    <fullName>Rto_registration_charges__c</fullName>
    <label>Rto registration charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>