ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Sms_tc_charges__c.field-meta.xml
<CustomField>
    <fullName>Sms_tc_charges__c</fullName>
    <label>Sms tc charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>