ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Statement_charges__c.field-meta.xml
<CustomField>
    <fullName>Statement_charges__c</fullName>
    <label>Statement charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>