ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Swap_charges__c.field-meta.xml
<CustomField>
    <fullName>Swap_charges__c</fullName>
    <label>Swap charges</label>
    <length>18</length>
    <type>Text</type>
</CustomField>