ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Tradecertch__c.field-meta.xml
<CustomField>
    <fullName>Tradecertch__c</fullName>
    <label>Tradecertch</label>
    <length>18</length>
    <type>Text</type>
</CustomField>