ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Travelcc__c.field-meta.xml
<CustomField>
    <fullName>Travelcc__c</fullName>
    <label>Travelcc</label>
    <length>18</length>
    <type>Text</type>
</CustomField>