ProdIND/ProdPrograms/force-app/main/default/objects/SOC_Master__c/fields/Vehicle_reg_hypothecation_verification__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_reg_hypothecation_verification__c</fullName>
    <label>Vehicle reg &amp; hypothecation verification</label>
    <length>18</length>
    <type>Text</type>
</CustomField>